--- a/view/css/blog.css
+++ b/view/css/blog.css
@@ -50,6 +50,13 @@ div.widget.blog-content-module  blockquote,
 	border-bottom: 1px solid #CABCBF;
 	margin: 18px 18px 12px 18px;
 }
+div.widget.blog-content-module  blockquote div.read_more {
+    text-align: right;
+}
+div.widget.blog-content-module  blockquote div.read_more a {
+    text-decoration: none;
+    text-transform: uppercase;
+}
 div.widget.blog-content-module  .embed,
 #blog-content .post .embed{
     width: 500px;
