--- a/view/css/common.css
+++ b/view/css/common.css
@@ -119,6 +119,28 @@ a.button.red:hover {
     background: #e44133 url('button/red-active.png') repeat-x top;
 }
 
+input.weak[type="submit"],
+input.weak[type="reset"],
+button.weak,
+a.button.weak {
+    background: #60c1bf url('button/aqua-active.png') repeat-x top;
+    color: white;
+}
+
+input.weak[type="submit"]:active,
+input.weak[type="reset"]:active,
+button.weak:active,
+a.button.weak:active {
+    background: #b5161e url('button/red.png') repeat-x top;
+}
+
+input.weak[type="submit"]:hover,
+input.weak[type="reset"]:hover,
+button.weak:hover,
+a.button.weak:hover {
+    background: #b5161e url('button/red.png') repeat-x top;
+}
+
 input.green[type="submit"],
 input.green[type="reset"],
 button.green,
