--- a/view/css/home.css
+++ b/view/css/home.css
@@ -48,6 +48,16 @@ body.home div#main div.learn div.post {
     display: none;
 }
 
+body.home div#main div.learn div.post div.read_more{
+    text-align: right;
+    margin: 30px;
+}
+
+body.home div#main div.learn div.post div.read_more a {
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
 body.home div#main div.learn div.embed,
 body.home div#main div.learn div.image {
     position: absolute;
