Arreglos * El admin guardaba grupo vacio sin null y no salia en el formulario * quitar un border de 25px en el footer * quitar resto de "activable" fijo en los pasos 1 y 2 * quitar el print_r de errores * agenda en el preview * en la pagina de aportar, form dentro de los divs para no joder el estilo del center * widget proyecto: iconos de recompensa pequeños y colaterales * agenda en el paso de costes * cambios del paso 1 al dashboard (y estilos) * beta en el logo de goteo (guardo backup sin el beta) * enlace a perfil publico en el menu dashboard * enlace a la licencia dentro del tooltip de recompensa

--- a/view/css/dashboard/view.css
+++ b/view/css/dashboard/view.css
@@ -1,4 +1,5 @@
 @import url('activity/summary.css');
+@import url('profile/profile.css');
 @import url('projects/rewards.css');
 
 body.dashboard div#main {
