--- a/view/css/project/widget/project.css
+++ b/view/css/project/widget/project.css
@@ -345,7 +345,7 @@ div.widget.project div.meter dl dd.days {
 
 div.widget.project div.rewards {
     border-top: 1px solid #d1d3d4;    
-    padding: 12px 0 0 !important;
+    padding: 0px !important;
     position: relative;
     margin: 12px 12px 0 !important;
 }
@@ -373,52 +373,59 @@ div.widget.project div.rewards ul {
 div.widget.project div.rewards ul li {
     display: inline-block;
     margin-right: 5px;
-    width: 32px;
-    height: 32px;
+    width: 21px;
+    height: 21px;
     line-height: 2000px;
     text-indent: 2000px;
     overflow: hidden;
-    background-image: url('../../icon/m/blank.png');
+    background-image: url('/view/css/icon/s/blank.png');
+	opacity:0.60;
+	filter:alpha(opacity=60);
+}
+
+div.widget.project div.rewards ul li.active {
+	opacity: 1 !important;
+	filter:alpha(opacity=100) !important;
 }
 
 div.widget.project div.rewards ul li a {
     display: block;
-    width: 32px;
-    height: 32px;
+    width: 21px;
+    height: 21px;
     line-height: 2000px;
     text-indent: 2000px;
 }
 
 div.widget.project div.rewards ul li.file  {
-    background-image: url('../../icon/m/file.png');
+    background-image: url('/view/css/icon/s/file.png');
 }
 
 div.widget.project div.rewards ul li.money {
-    background-image: url('../../icon/m/money.png');
+    background-image: url('/view/css/icon/s/money.png');
 }
 
 div.widget.project div.rewards ul li.code {
-    background-image: url('../../icon/m/code.png');
+    background-image: url('/view/css/icon/s/code.png');
 }
 
 div.widget.project div.rewards ul li.service {
-    background-image: url('../../icon/m/service.png');
+    background-image: url('/view/css/icon/s/service.png');
 }
 
 div.widget.project div.rewards ul li.manual  {
-    background-image: url('../../icon/m/manual.png');
+    background-image: url('/view/css/icon/s/manual.png');
 }
 
 div.widget.project div.rewards ul li.product {
-    background-image: url('../../icon/m/product.png');
+    background-image: url('/view/css/icon/s/product.png');
 }
 
 div.widget.project div.rewards ul li.design {
-    background-image: url('../../icon/m/design.png');
+    background-image: url('/view/css/icon/s/design.png');
 }
 
 div.widget.project div.rewards ul li.other {
-    background-image: url('../../icon/m/other.png');
+    background-image: url('/view/css/icon/s/other.png');
 }
 
 div.widget.project div.buttons {
