--- a/view/css/project/widget/updates.css
+++ b/view/css/project/widget/updates.css
@@ -239,3 +239,8 @@ div.post-comments div.message blockquote {
 .side {
 	float:right;
 }
+
+.project-updates ul#pagination {
+	margin: 0px 0px 10px 0px !important;
+}
+
