--- a/view/css/project/edit/costs.css
+++ b/view/css/project/edit/costs.css
@@ -39,10 +39,12 @@ body.project-edit div#main.costs div.superform li.element.cost div.description {
     margin: .5em 0;
 }
 
+/*
 body.project-edit div#main.costs div.superform li.element.cost input.edit,
 body.project-edit div#main.costs div.superform li.element.cost input.remove {
     width: 7em;
 }
+*/
 
 body.project-edit div#main.costs div.superform li.element.cost input.edit {
     margin-top: -1em;
