--- a/view/css/project/view.css
+++ b/view/css/project/view.css
@@ -26,20 +26,27 @@ body.project-show div#main {
 */
 
 body.project-show div#sub-header {
+	height:120px;
     padding-bottom: 0;
+	background:#faf8f8;
 }
 
 body.project-show div#sub-header div.project-header{
     min-height: 75px;
+	position:relative;
+	top:10px;
 }
 
-body.project-show div#sub-header img{
+body.project-show div#sub-header div.project-header img{
     float: left;
-    margin-right: 20px;
+	margin: 6px 20px 0 20px;
+}
+
+body.project-show div#sub-header div.project-header h2{
+	font-size:2em;
 }
 
 body.project-show div#sub-header div.project-by {
-    padding-left: 82px;
     color: #20B3B2;
     font-size: 12px;
     margin: 0 0 .5em;
@@ -57,14 +64,16 @@ body.project-show div#sub-header div.project-by a:hover {
 }
 
 body.project-show div#sub-header div.categories {
+	position: absolute;
+    right: 10px;
     text-align: right;
-    margin-top: -60px;
+    top: -15px;
 }
 
 body.project-show div#sub-header div.categories h3 {
     font-weight: normal;
     color: #20B3B2;   
-    margin: 0 0 .5em;
+    margin: 0;
 }
 
 body.project-show div#sub-header div.categories * {
@@ -80,9 +89,12 @@ body.project-show div#sub-header div.categories a:hover {
     color: #20B3B2;
 }
 
-body.project-show div.project-menu {
+body.project-show div#sub-header {
+}
+
+body.project-show div.project-menu div.sub-menu{
     max-width: 940px;
-    margin: 20px auto 0;
+    margin: 0;
 }
 
 body.project-show div.project-menu ul {
@@ -96,6 +108,13 @@ body.project-show div.project-menu ul {
 body.project-show div.project-menu ul li {
     display: inline-block;
     margin-right: 1px;    
+	height:30px;
+}
+
+body.project-show div.project-menu ul li span.digits{
+	display:inline-block;
+	width:30px;
+	text-align:center;
 }
 
 body.project-show div.project-menu ul li a {
@@ -109,6 +128,7 @@ body.project-show div.project-menu ul li a {
     background-image: url('/view/css/project/view/menu/regular_menu.png');
     background-position: left top !important;
     background-repeat: repeat-x;
+	font-size:11px;	
 }
 
 body.project-show div.project-menu ul li.active a {
@@ -126,10 +146,12 @@ body.project-show div.project-menu ul li.messages a {
 
 body.project-show div.project-menu ul li.home a {
     background-color: #1fb0b0;
+	padding-right:45px;
 } 
 
 body.project-show div.project-menu ul li.needs a {
     background-color: #e13028;
+	padding-right:35px;
 } 
 
 body.project-show div.project-menu ul li.supporters a {
