--- a/view/css/jquery.jscrollpane.css
+++ b/view/css/jquery.jscrollpane.css
@@ -23,7 +23,7 @@
 	right: 0;
 	width: 16px;
 	height: 100%;
-	background: #fff;
+	background: transparent;
 }
 
 .jspHorizontalBar
@@ -33,7 +33,7 @@
 	left: 0;
 	width: 100%;
 	height: 16px;
-	background: red;
+	background: transparent;
 }
 
 .jspVerticalBar *,
@@ -55,13 +55,13 @@
 
 .jspTrack
 {
-	background: #fff;
+	background: transparent;
 	position: relative;
 }
 
 .jspDrag
 {
-	background: #fff;
+	background: transparent;
 	position: relative;
 	top: 0;
 	left: 0;
@@ -77,7 +77,7 @@
 
 .jspArrow
 {
-	background: #fff;
+	background: transparent;
 	text-indent: -20000px;
 	display: block;
 	cursor: pointer;
