Ajustando un poco mas los retornos del widget de proyecto para que quepan 6

--- a/view/css/project/widget/project.css
+++ b/view/css/project/widget/project.css
@@ -375,6 +375,10 @@ div.widget.project div.rewards h8 {
     font-size: 12px;
 }
 
+div.widget.project div.rewards h4 {
+    width: 62px !important;
+}
+
 div.widget.project div.rewards ul {
     margin: 0;
     padding: 0;
